Card-shaped things のクラスを作成

--- a/Empires.tex
+++ b/Empires.tex
@@ -6,9 +6,9 @@
 \def\Expantion{帝国}\def\errata{2016}
 \CardInfo{Engineer}{技術者}{CostA=\Debt{4}}{
 	コスト\Coin{4}以下のカード 1 枚を獲得する。
-	これを廃棄してもよい。そうした場合、追加で
-	コスト\Coin{4}以下のカード 1 枚を獲得する。
-}
+	その後、追加でコスト\Coin{4}以下のカード 1 枚を
+	獲得するために、これを廃棄してもよい。
+}[2017私家]
 \CardInfo{City Quarter}{市街}{CostA=\Debt{8}}{
 	\Vanilla{action=2}
 	あなたの手札を公開し、その中のアクションカード
