カード表現マクロの修正

--- a/test-landscape.tex
+++ b/test-landscape.tex
@@ -4,7 +4,7 @@
 \documentclass[landscape,grid]{waku}
 \begin{document}
 \def\Expantion{ルネサンス}\def\errata{2019}
-\LandscapeInfo{Flag}{旗}+{Type=アーティファクト,Cost=4}{
+\LandscapeInfo{Flag}{旗}+[\(-\text{1}\)札トークン](旗手){Type=アーティファクト,Cost=4}{
 	あなたの手札を引き直すとき、\PlusCard{1}。
 }
 \end{document}
