ランタンの修正

--- a/Renaissance-landscape.tex
+++ b/Renaissance-landscape.tex
@@ -18,7 +18,7 @@
 \LandscapeInfo{Lantern}{ランタン}+(国境警備隊)*{}{
 	あなたの使用する国境警備隊は、カードを 3 枚
 	公開し、2 枚を捨札にする。（3 枚ともアクション
-	カードの場合は角笛を得る。
+	カードの場合は角笛を得る）
 }[2019私家]
 \LandscapeInfo{Treasure Chest}{宝箱}(剣客)*{}{
 	あなたの購入フェイズの開始時に、金貨 1 枚を獲得する。
