ルネサンスのカード状のものを修正

--- a/Renaissance-landscape.tex
+++ b/Renaissance-landscape.tex
@@ -9,7 +9,7 @@
 	あなたの手札を引き直すとき、\PlusCard{1}。
 }[2020HJ]
 \LandscapeInfo{Horn}{角笛}(国境警備隊)*{}{
-	1 ターンに 1 回のみ、あなたが場から国境警備隊を
+	1 ターンに 1 回のみ、あなたが場から国境警備隊 1 枚を
 	捨札にするとき、それをデッキの一番上に置いてもよい。
 }
 \LandscapeInfo{Key}{鍵}+(出納官)*{}{
@@ -32,7 +32,7 @@
 	あなたの手札 1 枚をデッキの一番上に置く。
 }
 \LandscapeInfo{Pageant}{野外劇}{Cost=3}{
-	あなたの購入フェイズの終了時に、\Coin{1} を払って
+	あなたの購入フェイズの終了時に、\Coin{1}を払って
 	\PlusCoffer{1} を得てもよい。
 }
 \LandscapeInfo{Sewers}{下水道}{Cost=3}{
